--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Game/Blueprints/GameRules/GI_CarGame.GI_CarGame_C
+GameInstanceClass=/Game/Blueprints/GameRules/GI_CarGame_new.GI_CarGame_new_C
 GameDefaultMap=/Game/VehicleTemplate/Maps/VehicleExampleMap.VehicleExampleMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameMode
